--- a/travis.cfg
+++ b/travis.cfg
@@ -23,12 +23,14 @@ abita.adapter = 0.3
 abita.utils = 0.3
 five.pt = 2.2.1
 hexagonit.testing = 1.2.2
+lxml = 2.3.4
 mock = 1.0.1
 zope.pagetemplate = 3.6.3
 
 [test]
 eggs =
     Pillow
+    lxml
     ${buildout:package-name}
     ${buildout:package-extras}
     ${buildout:test-eggs}
