--- a/travis.cfg
+++ b/travis.cfg
@@ -19,7 +19,8 @@ versions = versions
 
 [versions]
 Pillow = 1.7.8
-abita.adapter = 0.3
+abita.adapter = 0.4
+abita.basetheme = 0.1
 abita.utils = 0.5
 five.pt = 2.2.1
 hexagonit.testing = 1.2.2
