Update styles by moving common styles to abita.basetheme package.

--- a/travis.cfg
+++ b/travis.cfg
@@ -19,9 +19,9 @@ versions = versions
 
 [versions]
 Pillow = 1.7.8
-abita.adapter = 0.4
-abita.basetheme = 0.1
+abita.basetheme = 0.2
 abita.utils = 0.5
+collective.base = 0.1
 five.pt = 2.2.1
 hexagonit.testing = 1.2.2
 lxml = 2.3.4
