--- a/travis.cfg
+++ b/travis.cfg
@@ -21,8 +21,11 @@ versions = versions
 abita.basetheme = 0.3.1
 abita.utils = 0.5
 collective.base = 0.3
+five.pt = 2.2.1
 hexagonit.testing = 1.2.2
 mock = 1.0.1
+z3c.pt = 2.2.3
+zope.pagetemplate = 3.6.3
 
 [test]
 eggs =
