--- a/travis.cfg
+++ b/travis.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/travis-4.2.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
 
 allow-hosts =
     *.plone.org
@@ -18,19 +18,14 @@ package-name = abita.theme
 versions = versions
 
 [versions]
-abita.basetheme = 0.3.1
-abita.utils = 0.5
-collective.base = 0.3
-five.pt = 2.2.1
+abita.basetheme = 0.4
+abita.utils = 0.7
+collective.base = 0.4
 hexagonit.testing = 1.2.2
 mock = 1.0.1
-z3c.pt = 2.2.3
-zope.pagetemplate = 3.6.3
 
 [test]
 eggs =
-    Pillow
-    lxml
-    ${buildout:package-name}
+    ${buildout:package-name} [test]
     ${buildout:package-extras}
     ${buildout:test-eggs}
