update for travis-ci

--- a/travis.cfg
+++ b/travis.cfg
@@ -2,14 +2,8 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
 
-allow-hosts =
-    *.plone.org
-    *.python.org
-    *.zope.org
+allow-hosts +=
     abita.fi
-    docutils.sourceforge.net
-    effbot.org
-    prdownloads.sourceforge.net
 
 find-links += http://abita.fi/packages
 
@@ -18,8 +12,8 @@ package-name = abita.theme
 versions = versions
 
 [versions]
-abita.basetheme = 0.5.1
-collective.base = 0.7
+abita.basetheme = 0.8.1
+collective.base = 0.7.1
 hexagonit.testing = 1.2.2
 mock = 1.0.1
 
